src/pages/styles/global.css
@font-face {
    font-family: 'Manrope';
    src:    url('../../fonts/Manrope-SemiBold.woff') format('woff'),
            url('../../fonts/Manrope-SemiBold.woff2') format('woff2'),
            url('../../fonts/Manrope-SemiBold.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@media (min-width:575px)  { 
    body {overflow: hidden ;}
    .logo, .slatt, .socials  {
        font-size: 3vw;
    }
    div {
        overflow: hidden;
    }
    .face-imgs {
        height: 40vw !important; 
        width: 40vw !important;
        top: 50%;
        margin-top: -20vw; 
    }
    .main-content {
        height: 100vh !important;
    }
    .carousel {
        width: 60vw !important;
    }
}

.fixed-bottom {
    padding-left:2% !important;
} 

html,
body {
    overflow-x: hidden !important;
    position: relative;
    max-width: 100% !important;
}

.face-imgs {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background-color: #020202;
    z-index: -1;
}
  
@media (max-width:575px)  { 
    .tohide {
        display: none !important;
     }
    #sidebar-tag {
        height:80px !important;
    }
    .face-imgs {
        height: 90vw !important; 
        width: 90vw !important; 
        top: 50%;
        margin-top: -45%;
    }
    .carousel {
        width: 90vw !important;
    }
    #bottom-text {
        background-color: #020202;
        width: 40%;
        font-size: 1em !important;
    }
    .logo {
        margin-top: 15px !important;
    }
    .big-header {
        overflow: hidden !important;
    }
    .about-box {
        max-width: 80vw !important;
    }
    .client-box {
        height: 45vw !important;
        width: 45vw !important;
        background: #020202;
    }
}

@media (max-width:430px)  { 
    #bottom-text {
        font-size: 1.5vw;
    }
}

@supports (-webkit-touch-callout: none) {
    #iosHeight {
        height: -webkit-fill-available !important;
    }
    .face-imgs {
        display: none !important;
    }
    .about-back {
        background-image: url("../../images/backandforth.gif");
        background-size: cover;
    }
  }

@media (min-width:1520px)  { 
    p {
        font-size: 1vw;
    }

    .face-imgs {
        height: 40vw !important; 
        width: 40vw !important; 
    }  
}

@media (max-width:991px)  { 
    #car-display {
        padding-right: 0px !important;
    }
    .portfolio-title {
        font-size: 2em !important;
    }
}


.sidebar {
    height:100vh !important;
}

.logo-redirect {
    text-decoration:none !important;
    color:black;
}

h1 p {
    font-family: Manrope, sans-serif;
    font-style: normal;
}

body {
    background-color: #F2F2F2 !important;
    background: #F2F2F2 url("../../images/pattern.png") repeat;
    transition: 1s;
}

.sidebar-content {
    background-color:#020202;
    padding-left:2% !important;
}

.logo {
    font-family: Manrope, sans-serif;
    background-color: #F2F2F2;
    color:black !important;
    margin:3%;
    margin-left:auto;
    margin-right:auto;
    box-shadow: 3px;
}
.slatt:hover  {
    animation: clientHover 2s ease-out 0s infinite alternate none;
    color: #fff !important;
    cursor:pointer;
}

.socials {
    color: #fff;
}

.socials:hover  {
    animation: iconHover 2s ease-out 0s infinite alternate none;
    cursor:pointer;
}

.face-imgs img {
    position: absolute;
    width: 100%;
    border: solid 2px #020202;
}


.icon-logo {
    margin-left:1%;
    margin-top:1%;
    margin-right:1%;
    margin-bottom:1%;
    background: #000;
}

.about-link {
    text-decoration: none !important;
    color: #000;
}

.client-box {
    height: 30vh;
    width: 30vh;
    background: #020202;
}

.content-box {
    background: #020202;
}

.client-box:hover {
    animation: clientHover 2s ease-out 0s infinite alternate none;
}

@keyframes clientHover {
    0.0%{
        background: #88292F;
    }
    100%{
        background: #CE8147;
    }
}

@keyframes iconHover {
    0.0%{
        color: #88292F;
    }
    100%{
        color: #CE8147;
    }
}


.client-box>img {
    max-width: 70%;
    max-height: 70%;
    width: auto;
    height: auto;
}
@import url('https://fonts.googleapis.com/css?family=Roboto:300,500');

@color-card-background: #2d3638;
@color-tag-background: #191e20;
@color-anchor: #e37544;
@color-body-copy: #b9bcbd;
@default-border-radius: 0px;
@breakpoint-medium: "screen and (min-width: 700px)";


.form-popup-bg {
  position:absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
}
.form-popup-bg {
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(94, 110, 141, 0.9);
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
  -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
  transition: opacity 0.3s 0s, visibility 0s 0.3s;
  overflow-y: auto;
  z-index: 10000;
}
.form-popup-bg.is-visible {
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
  -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
  transition: opacity 0.3s 0s, visibility 0s 0s;
}
.form-container {
    background-color: #2d3638;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
    position:relative;
  padding: 40px;
  color: #fff;
}
.close-button {
  background:none;
  color: #fff;
  width: 40px;
  height: 40px;
  position: absolute;
  top: 0;
  right: 0;
  border: solid 1px #fff;
}

.form-popup-bg:before{
    content:'';
    background-color: #fff;
  opacity: .25;
  position:absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.contact_form {
    color:black;
}

input {
    background-color: #F2F2F2;
    border: none !important;
}

.modal-content {
    background-color: #020202 !important;
    border-radius: 0px !important;
    border: solid 5px #f2f2f2 !important;
}

.about-box {
    max-width: 55vw;
}

.about-grey {
    transition: 1s;
    filter: grayscale(1) brightness(1.3);
}

.about-grey:hover {
    filter: grayscale(0) brightness(1);
}

.stickyFooter{
    padding-top:5%;
    padding-bottom:1%;
    background-color: #020202;
}

.car-border {
    border: solid 10px #020202;
}

.link {
    text-decoration: underline;
}

.link:hover {
    animation: clientHover 2s ease-out 0s infinite alternate none;
    text-decoration: none !important;
}

::selection {
    background: #CE8147;
}

::-moz-selection {
    background: #CE8147;
}

.text-box {
    color:Black;
    padding-top:30px !important;
}

.submit-button {
    background-color:#020202;
    color:#f2f2f2;
}


#bottom-text {
    font-size: 1.4vw;
}

.portfolio-panel {
    background-color:#020202;
    color:#f2f2f2;
    height: auto !important;
}

.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23020202' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
}

.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23020202' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
}

.container {
    max-width: none !important;
}

.portfolio-title {
    font-size: 2.3vw;
}

